--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "lint:check": "npx eslint .",
+    "lint:fix": "npx eslint --fix ."
   },
   "repository": {
     "type": "git",
